--- a/action.yml
+++ b/action.yml
@@ -281,9 +281,12 @@ runs:
           qt_os="windows"
           qt_compiler="win64_msvc2017_64"
         fi
-        python -m pip install aqtinstall
-        python -m aqt install-qt   --outputdir $QT_INSTALL_DIR $qt_os desktop $QT_VERSION $qt_compiler -m qtcharts qtwebengine
-        python -m aqt install-tool --outputdir $QT_INSTALL_DIR $qt_os desktop tools_ifw qt.tools.ifw.43
+        if ! ls -a "$QT_INSTALL_DIR"/* >/dev/null 2>&1; then
+          # directory does not exist or is empty
+          python -m pip install aqtinstall
+          python -m aqt install-qt   --outputdir $QT_INSTALL_DIR $qt_os desktop $QT_VERSION $qt_compiler -m qtcharts qtwebengine
+          python -m aqt install-tool --outputdir $QT_INSTALL_DIR $qt_os desktop tools_ifw qt.tools.ifw.43
+        fi
         Qt5_ROOT="$QT_INSTALL_DIR/$QT_VERSION/${qt_compiler#*win64_}"
         Qt5_DIR="$Qt5_ROOT/lib/cmake/Qt5"
         echo "Qt5_ROOT=$Qt5_ROOT" | tee -a $GITHUB_ENV
