--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,10 @@ inputs:
     description: 'Choose between: minimal, standard, full'
     required: false
     default: 'standard'
+  sofa_with_sofapython3:
+    description: 'SofaPython3 is embedded in SOFA package'
+    required: false
+    default: 'true'
   python_version:
     description: 'Python version to install'
     required: false
@@ -392,7 +396,7 @@ runs:
         ls -la "${{ inputs.sofa_root }}"
         echo '--------------- git-info.txt ---------------'
         cat "${{ inputs.sofa_root }}"/git-info.txt 2>&1 || true
-        
+
     - name: Set SOFA_ROOT and outputs.sofa_root
       id: set-sofa-root
       shell: bash
@@ -404,3 +408,13 @@ runs:
           echo "$SOFA_ROOT/bin" >> $GITHUB_PATH
         fi
         echo "::set-output name=sofa_root::$(echo $SOFA_ROOT)"
+
+    - name: Remove SofaPython3 from SOFA binaries
+      if: inputs.sofa_with_sofapython3 != 'true'
+      shell: bash
+      run: |
+        # TODO: remove this step when SOFA "standard" no longer contains SP3
+        echo "Removing SofaPython3 from SOFA binaries (if any)"
+        rm -rf $SOFA_ROOT/plugins/SofaPython3*
+        rm -rf $SOFA_ROOT/bin/SofaPython3*
+        rm -rf $SOFA_ROOT/lib/SofaPython3*
