Set specific versions for numpy and scipy

--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,14 @@ inputs:
     description: 'Python version to install'
     required: false
     default: '3.8'
+  numpy_version:
+    description: 'numpy version to install'
+    required: false
+    default: '1.21.5'
+  scipy_version:
+    description: 'scipy version to install'
+    required: false
+    default: '1.7.3'
   pybind11_version:
     description: 'pybind11 version to install'
     required: false
@@ -198,12 +206,12 @@ runs:
         echo "PYTHONIOENCODING=UTF-8" | tee -a $GITHUB_ENV
         
         # [MacOS] unlink any brew python
-        if [[ "$RUNNER_OS" == "macOS" ]]; then
-          brew list | grep python | while read package; do
-            echo "brew unlink $package"
-            brew unlink $package
-          done
-        fi
+        #if [[ "$RUNNER_OS" == "macOS" ]]; then
+        #  brew list | grep python | while read package; do
+        #    echo "brew unlink $package"
+        #    brew unlink $package
+        #  done
+        #fi
         
         # Set PYTHON_ROOT and PYTHON_EXE
         PYTHON_ROOT="$(find $RUNNER_TOOL_CACHE -maxdepth 3 -type d -path '**/Python/${{ steps.install-python.outputs.python-version }}*/x64')"
@@ -235,12 +243,12 @@ runs:
         fi
         echo "SOFA_VERSION_FOR_DEPS=$SOFA_VERSION_FOR_DEPS" | tee -a $GITHUB_ENV
 
-    - name: Install numpy and scipy
+    - name: Install numpy ${{ inputs.numpy_version }} and scipy ${{ inputs.scipy_version }}
       shell: bash
       run: |
-        $PYTHON_EXE -m pip install numpy scipy
+        $PYTHON_EXE -m pip install numpy==${{ inputs.numpy_version }} scipy==${{ inputs.scipy_version }}
 
-    - name: Install pybind11
+    - name: Install pybind11 ${{ inputs.pybind11_version }}
       shell: bash
       run: |
         $PYTHON_EXE -m pip install pybind11==${{ inputs.pybind11_version }}
