--- a/action.yml
+++ b/action.yml
@@ -285,7 +285,7 @@ runs:
           # directory does not exist or is empty
           $PYTHON_EXE -m pip install aqtinstall
           $PYTHON_EXE -m aqt install-qt   --outputdir $QT_INSTALL_DIR $qt_os desktop ${{ inputs.qt_version }} $qt_compiler -m qtcharts qtwebengine
-          $PYTHON_EXE -m aqt install-tool --outputdir $QT_INSTALL_DIR $qt_os desktop tools_ifw qt.tools.ifw.43
+          $PYTHON_EXE -m aqt install-tool --outputdir $QT_INSTALL_DIR $qt_os desktop tools_ifw
         fi
         Qt5_ROOT="$QT_INSTALL_DIR/${{ inputs.qt_version }}/${qt_compiler#*win64_}"
         Qt5_DIR="$Qt5_ROOT/lib/cmake/Qt5"
