--- a/action.yml
+++ b/action.yml
@@ -96,7 +96,7 @@ runs:
         cp "${{ github.action_path }}"/*.yml "$GITHUB_WORKSPACE/sofa-setup-action"
         ls -la "$GITHUB_WORKSPACE/sofa-setup-action"
         echo "------------------------------------------------"
-        
+
         # Set executable extension
         EXE=''
         if [[ "$RUNNER_OS" == "Windows" ]]; then
@@ -104,7 +104,7 @@ runs:
         fi
         echo "EXE=$EXE" | tee -a $GITHUB_ENV
         echo "::set-output name=exe::$(echo $EXE)"
-        
+
         if [ -n "${{ github.event.number }}" ]; then
           RUN_BRANCH="PR-${{ github.event.number }}"
         elif [ -n "${{ github.event.pull_request.number }}" ]; then
@@ -116,7 +116,7 @@ runs:
         fi
         echo "RUN_BRANCH=$RUN_BRANCH" | tee -a $GITHUB_ENV
         echo "::set-output name=run_branch::$(echo $RUN_BRANCH)"
-        
+
         # Auto-setup workspace + env vars
         if [[ "${{ inputs.workspace_auto_setup }}" == "true" ]]; then
           mkdir -p "$GITHUB_WORKSPACE/src" "$GITHUB_WORKSPACE/build" "$GITHUB_WORKSPACE/install" "$GITHUB_WORKSPACE/artifact"
@@ -138,14 +138,14 @@ runs:
         echo "::set-output name=workspace_build_path::$(echo $WORKSPACE_BUILD_PATH)"
         echo "::set-output name=workspace_install_path::$(echo $WORKSPACE_INSTALL_PATH)"
         echo "::set-output name=workspace_artifact_path::$(echo $WORKSPACE_ARTIFACT_PATH)"
-        
+
         # Set default settings for ccache
         echo "CCACHE_COMPRESS=true" | tee -a $GITHUB_ENV
         echo "CCACHE_COMPRESSLEVEL=6" | tee -a $GITHUB_ENV
         echo "CCACHE_MAXSIZE=1G" | tee -a $GITHUB_ENV
         echo "CCACHE_BASEDIR=$WORKSPACE_BUILD_PATH" | tee -a $GITHUB_ENV
         echo "CCACHE_DIR=$GITHUB_WORKSPACE/.ccache" | tee -a $GITHUB_ENV
-        
+
         # TODO: find a better way to handle dependency versions
         QT_INSTALL_DIR="$HOME/Qt"
         EIGEN_INSTALL_DIR="$(cd "$HOME" && pwd -W 2>/dev/null || pwd)/eigen"
@@ -162,12 +162,12 @@ runs:
           EIGEN_INSTALL_DIR="C:/eigen"
           BOOST_VERSION=1.69.0
           BOOST_INSTALL_DIR="C:/boost"
-          
+
           # vsdevcmd.bat is here: 'C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/Common7/Tools/vsdevcmd.bat'
           VS_INSTALL_DIR="$(cmd //c 'vswhere -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath')"
           VS_VSDEVCMD='cd /d '$VS_INSTALL_DIR'\Common7\Tools && VsDevCmd.bat -host_arch=amd64 -arch=amd64'
         fi
-        
+
         echo "SUDO=$SUDO" | tee -a $GITHUB_ENV
         echo "QT_INSTALL_DIR=$QT_INSTALL_DIR" | tee -a $GITHUB_ENV
         echo "EIGEN_INSTALL_DIR=$EIGEN_INSTALL_DIR" | tee -a $GITHUB_ENV
@@ -176,7 +176,7 @@ runs:
         echo "PYBIND11_INSTALL_DIR=$PYBIND11_INSTALL_DIR" | tee -a $GITHUB_ENV
         echo "VS_INSTALL_DIR=$VS_INSTALL_DIR" | tee -a $GITHUB_ENV
         echo "VS_VSDEVCMD=$VS_VSDEVCMD" | tee -a $GITHUB_ENV
-        
+
         echo "::set-output name=vs_install_dir::$(echo $VS_INSTALL_DIR)"
         echo "::set-output name=vs_vsdevcmd::$(echo $VS_VSDEVCMD)"
 
@@ -213,7 +213,7 @@ runs:
         mkdir -p "$PYTHONUSERBASE" && chmod -R 777 "$PYTHONUSERBASE"
         echo "PYTHONUSERBASE=$PYTHONUSERBASE" | tee -a $GITHUB_ENV
         echo "PYTHONIOENCODING=UTF-8" | tee -a $GITHUB_ENV
-        
+
         # Set PYTHON_ROOT and PYTHON_EXE
         PYTHON_ROOT="$(find $RUNNER_TOOL_CACHE -maxdepth 3 -type d -path '**/Python/${{ steps.install-python.outputs.python-version }}*/x64')"
         PYTHON_ROOT="$(cd $PYTHON_ROOT && pwd -W 2>/dev/null || pwd)"
@@ -233,10 +233,10 @@ runs:
         echo "------- ls -la PYTHON_ROOT -------"
         ls -la "$PYTHON_ROOT"
         echo "----------------------------------"
-        
+
         # Upgrade pip
         $PYTHON_EXE -m pip install --upgrade pip
-        
+
         # Set SOFA_VERSION_FOR_DEPS
         SOFA_VERSION_FOR_DEPS="$(echo "${{ inputs.sofa_version }}" | sed 's:[^0-9]*::g')"
         if [ -z "$SOFA_VERSION_FOR_DEPS" ]; then
@@ -312,7 +312,7 @@ runs:
       with:
         path: ${{ env.QT_INSTALL_DIR }}
         key: qt-${{ inputs.qt_version }}_${{ runner.os }}_for-SOFA-${{ inputs.sofa_version }}_${{ hashFiles('**/*.yml') }}
-        
+
     - name: Install Qt
       if: inputs.sofa_scope != 'minimal'
       shell: bash
@@ -404,32 +404,71 @@ runs:
         echo "Eigen3_ROOT=$EIGEN_INSTALL_DIR" | tee -a $GITHUB_ENV
         echo "$EIGEN_INSTALL_DIR" >> $GITHUB_PATH
 
+    - name: Search for SOFA ${{ inputs.sofa_version }} on GitHub
+      id: get_sofa_from_github
+      uses: cardinalby/git-get-release-action@v1
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        doNotFailIfNotFound: true
+        releaseNameRegEx: '${{ inputs.sofa_version }}.*'
+        repo: 'sofa-framework/sofa'
+
     - name: Download and install the latest SOFA ${{ inputs.sofa_version }} binaries
       shell: bash
       run: |
-        # Download and install the latest SOFA ${{ inputs.sofa_version }} binaries
-        SOFA_OS="$RUNNER_OS"
-        if [[ "$SOFA_OS" == "macOS" ]]; then
-          SOFA_OS="MacOS"
-        fi
-        if ! ls -a "${{ inputs.sofa_root }}"/* >/dev/null 2>&1; then
+        if ! ls -a "${{ inputs.sofa_root }}"/* >/dev/null 2>&1; then # cache check
           # directory does not exist or is empty
-          mkdir -p "${{ runner.temp }}/sofa_tmp/zip" "${{ runner.temp }}/sofa_tmp/binaries"
-          urlPrefix="https://ci.inria.fr/sofa-ci-dev/job/nightly-generate-binaries/CI_BRANCH=${{ inputs.sofa_version }},CI_SCOPE=${{ inputs.sofa_scope }}"
-          urlSuffix="artifact/${SOFA_OS}/*zip*/${SOFA_OS}.zip"
-          url="$urlPrefix/lastBuild/$urlSuffix"
-          if ! curl --output /dev/null --silent --head --fail "$url"; then
-            echo 'There is no artifact for "lastBuild". Falling back on "lastSuccessfulBuild".'
-            url="$urlPrefix/lastSuccessfulBuild/$urlSuffix"
+          
+          if [ -n "${{ steps.get_sofa_from_github.outputs.id }}" ]; then
+            # Release was found on GitHub
+            SOFA_OS_GITHUB="$RUNNER_OS"
+            if [[ "$SOFA_OS_GITHUB" == "Linux" ]]; then
+              SOFA_OS_GITHUB="Linux"
+            elif [[ "$SOFA_OS_GITHUB" == "Windows" ]]; then
+              SOFA_OS_GITHUB="Win64"
+            elif [[ "$SOFA_OS_GITHUB" == "macOS" ]]; then
+              SOFA_OS_GITHUB="MacOS"
+            fi
+            url=https://github.com/sofa-framework/sofa/releases/download/${{ steps.get_sofa_from_github.outputs.tag_name }}/SOFA_${{ steps.get_sofa_from_github.outputs.tag_name }}_${SOFA_OS_GITHUB}.zip
+            mkdir -p "${{ runner.temp }}/sofa_tmp/zip" "${{ runner.temp }}/sofa_tmp/binaries"
+            echo "Getting SOFA from $url"
+            curl --output "${{ runner.temp }}/sofa_tmp/zip/sofa.zip" -L $url
+            unzip -qq "${{ runner.temp }}"/sofa_tmp/zip/sofa.zip -d "${{ runner.temp }}/sofa_tmp/binaries"
+            $SUDO mkdir -p "${{ inputs.sofa_root }}"
+            $SUDO mv "${{ runner.temp }}"/sofa_tmp/binaries/SOFA_*/* "${{ inputs.sofa_root }}"
+          
+          else
+            # Release was not found on GitHub, try to get it from Jenkins
+            SOFA_OS_JENKINS="$RUNNER_OS"
+            if [[ "$SOFA_OS_JENKINS" == "Linux" ]]; then
+              SOFA_OS_JENKINS="Linux"
+            elif [[ "$SOFA_OS_JENKINS" == "Windows" ]]; then
+              SOFA_OS_JENKINS="Windows"
+            elif [[ "$SOFA_OS_JENKINS" == "macOS" ]]; then
+              SOFA_OS_JENKINS="MacOS"
+            fi
+            mkdir -p "${{ runner.temp }}/sofa_tmp/zip" "${{ runner.temp }}/sofa_tmp/binaries"
+            urlPrefix="https://ci.inria.fr/sofa-ci-dev/job/nightly-generate-binaries/CI_BRANCH=${{ inputs.sofa_version }},CI_SCOPE=${{ inputs.sofa_scope }}"
+            urlSuffix="artifact/${SOFA_OS_JENKINS}/*zip*/${SOFA_OS_JENKINS}.zip"
+            url="$urlPrefix/lastBuild/$urlSuffix"
+            if ! curl --output /dev/null --silent --head --fail "$url"; then
+              echo 'There is no artifact for "lastBuild". Falling back on "lastSuccessfulBuild".'
+              url="$urlPrefix/lastSuccessfulBuild/$urlSuffix"
+            fi
+            echo "Getting SOFA from $url"
+            curl --output "${{ runner.temp }}/sofa_tmp/${SOFA_OS_JENKINS}.zip" -L $url
+            unzip -qq "${{ runner.temp }}"/sofa_tmp/${SOFA_OS_JENKINS}.zip -d "${{ runner.temp }}/sofa_tmp/zip"
+            unzip -qq "${{ runner.temp }}"/sofa_tmp/zip/${SOFA_OS_JENKINS}/SOFA_*.zip -d "${{ runner.temp }}/sofa_tmp/binaries"
+            $SUDO mkdir -p "${{ inputs.sofa_root }}"
+            $SUDO mv "${{ runner.temp }}"/sofa_tmp/binaries/SOFA_*/* "${{ inputs.sofa_root }}"
           fi
-          echo "Getting SOFA from $url"
-          curl --output "${{ runner.temp }}/sofa_tmp/${SOFA_OS}.zip" -L $url
-          unzip -qq "${{ runner.temp }}"/sofa_tmp/${SOFA_OS}.zip -d "${{ runner.temp }}/sofa_tmp/zip"
-          unzip -qq "${{ runner.temp }}"/sofa_tmp/zip/${SOFA_OS}/SOFA_*.zip -d "${{ runner.temp }}/sofa_tmp/binaries"
-          $SUDO mkdir -p "${{ inputs.sofa_root }}"
-          $SUDO mv "${{ runner.temp }}"/sofa_tmp/binaries/SOFA_*/* "${{ inputs.sofa_root }}"
-        fi
-        echo '--------------------------------------------'
+          
+        fi # cache check
+
+    - name: Log SOFA install directory
+      shell: bash
+      run: |
         echo "SOFA successfully downloaded and installed in ${{ inputs.sofa_root }}"
         echo '------------- inputs.sofa_root -------------'
         ls -la "${{ inputs.sofa_root }}"
