--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, macos-10.15, windows-2019]
-        sofa_branch: [master, v21.06]
+        sofa_branch: [master, v22.06, v21.06]
 
     steps:
       - name: Setup SOFA and deps
