--- a/action.yml
+++ b/action.yml
@@ -412,6 +412,7 @@ runs:
       with:
         doNotFailIfNotFound: true
         releaseNameRegEx: '${{ inputs.sofa_version }}.*'
+        draft: false
         repo: 'sofa-framework/sofa'
 
     - name: Download and install the latest SOFA ${{ inputs.sofa_version }} binaries
@@ -420,7 +421,7 @@ runs:
         if ! ls -a "${{ inputs.sofa_root }}"/* >/dev/null 2>&1; then # cache check
           # directory does not exist or is empty
           
-          if [[ -n "${{ steps.get_sofa_from_github.outputs.id }}" ]] && [[ "${{ steps.get_sofa_from_github.outputs.draft }}" == "false" ]]; then
+          if [ -n "${{ steps.get_sofa_from_github.outputs.id }}" ]; then
             # Release was found on GitHub
             SOFA_OS_GITHUB="$RUNNER_OS"
             if [[ "$SOFA_OS_GITHUB" == "Linux" ]]; then
