--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macos-11, windows-2019]
-        sofa_branch: [master, v21.06, v21.12, v22.06, v22.12, v23.06]
+        os: [ubuntu-22.04, macos-13, windows-2022]
+        sofa_branch: [master, v23.06]
 
     steps:
       - name: Check out repository
